--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Mario</title>
+    <title>Super Mario</title>
     <link rel="icon" href="./assets/favicon.ico">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap" rel="stylesheet" />
@@ -24,26 +26,34 @@
 
     <header class="cabecalho">
 
-        <a href="#" class="logo_mario">
-            <img src="./assets/logo-chapeu-mario.png" alt="Logo do Mario">
+        <a href="#">
+            <img class="logo" src="./assets/logo-chapeu-mario.png" alt="Logo do Mario">
         </a>
         <nav>
             <ul class="menu">
-                <li>Home</li>
-                <li>Detalhes</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Detalhes</a></li>
             </ul>
         </nav>
 
     </header>
+
     <main class="container">
         <div class="informacoes">
             <img class="imagem-titulo" src="./assets/titulo.png" alt="">
-            <p class="informacoes">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe sequi itaque,
-                voluptatem facilis eos veritatis ea eum suscipit nulla ab ducimus non! Adipisci
-                sint corporis eum, asperiores ratione quas labore.</p>
+            <p class="descricao">Mario é um encanador junto com seu irmão Luigi. Um dia, eles 
+            vão parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo 
+            rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</p>
             <button class="botao-trailer">Veja o Trailer</button>
         </div>
-        <img class="mario-amigos" src="./assets/super-mario-chars.png" alt="mario e amigos">
+        <img class="mario" src="./assets/super-mario-chars.png" alt="mario e amigos">
+
+        <div class="modal">
+            <div class="conteudo-modal">
+                <span class="fechar-modal">X</span>
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk" title="Trailer oficial" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
     </main>
 </body>
 
